<resources>
    <string name="app_name">GVP Intranet</string>
    <string name="error">Chyba</string>
    <string name="close">Zavřít</string>
    <string name="an_error_occurred_please_try_again_later">Vyskytla se chyba, zkuste to prosím později.</string>
    <string name="articles">Články</string>
    <string name="events">Aktuality</string>
    <string name="data_not_saved">Data nejsou uložena</string>
    <string name="downloading_data">Stahování dat…</string>
    <string name="finished">Hotovo</string>
    <string name="error_try_later">Chyba. Zkuste to později.</string>
    <string name="no_connection">Žádné připojení</string>
    <string name="article_detail">Detail článku</string>
    <string name="comments">Komentáře</string>
    <string name="loading">Načítání…</string>
    <string name="no_comments">Žádné komentáře</string>
    <string name="comments_not_updated_no_internet">Žádné připojení, komentáře se neaktualizovaly.</string>
    <string name="comments_not_updated_error">Chyba při stahování, komentáře se neaktualizovaly.</string>
    <string name="name_surname">Jméno a příjmení</string>
    <string name="relation_to_gvp">Vztah k GVP</string>
    <string name="relation_preference_summary">Zobrazí se u přidaných komentářů. Například student, absolvent, rodič, pozorovatel…</string>
    <string name="email">Email</string>
    <string name="add_comment">Přidat komentář</string>
    <string name="fill_in_this_field">Prosím vyplňte toto pole</string>
    <string name="fill_in_at_least_one_of_these_fields">Prosím vyplňte aspoň jedno z těchto polí.</string>
    <string name="field_must_not_be_empty">Pole nesmí být prázdné</string>
    <string name="enter_valid_email">Zadejte platný email</string>
    <string name="data_for_posting">Údaje k přidávání příspěvků</string>
    <string name="name_preference_summary">Zobrazí se u přidaných komentářů a článků</string>
    <string name="settings">Nastavení</string>
    <string name="pref_key_name" translatable="false">name</string>
    <string name="pref_key_email" translatable="false">email</string>
    <string name="pref_key_relation" translatable="false">relation</string>
    <string name="set_data_for_posting_to_post">Aby jste mohli přidávat komentáře, články a aktuality, je potřeba nejdříve v nastavení zadat vaše jméno, email a vztah ke škole.</string>
    <string name="comment_posted_waiting_for_approval">Komentář byl odeslán a čeká na schválení redakcí.</string>
    <string name="article_posted_waiting_for_approval">Článek byl odeslán a čeká na schválení redakcí.</string>
    <string name="event_posted_waiting_for_approval">Aktualita byla odeslána a čeká na schválení redakcí.</string>
    <string name="failed_posting_comment_error">Komentář se nepodařilo přidat. Zkuste to později.</string>
    <string name="failed_posting_comment_no_internet">Žádné připojení, komentář se nepodařilo přidat. Zkuste to později.</string>
    <string name="failed_posting_article_error">Článek se nepodařilo přidat. Zkuste to později.</string>
    <string name="failed_posting_article_no_internet">Žádné připojení, článek se nepodařilo přidat. Zkuste to později.</string>
    <string name="failed_posting_event_error">Aktualitu se nepodařilo přidat. Zkuste to později.</string>
    <string name="failed_posting_event_no_internet">Žádné připojení, aktualitu se nepodařilo přidat. Zkuste to později.</string>
    <string name="nadpis">Nadpis</string>
    <string name="article_publish_process_disclaimer">Článek bude publikován až po schválení redakcí, proto se nemusí objevit hned.</string>
    <string name="event_publish_process_disclaimer">Aktualita bude publikována až po schválení redakcí, proto se nemusí objevit hned.</string>
    <string name="note">Poznámka (nepovinné)</string>
    <string name="note_helper_text">Poznámka pouze pro redakci, nezobrazí se u článku. Ve většině případů by poznámka neměla být potřeba.</string>
    <string name="article_content">Obsah článku</string>
    <string name="article_content_helper_text">Hlavní obsah článku. Zobrazí se až po rozkliknutí detailu článku.</string>
    <string name="article_description">Popis článku</string>
    <string name="article_description_helper_text">Krátký popis článku. Zobrazí se pod nadpisem v seznamu článků. Měl by motivovat čtenáře k zobrazení obsahu článku a měl by být formátován jako jeden odstavec.</string>
    <string name="article_title_helper_text">Nadpis článku</string>
    <string name="event_title_helper_text">Nadpis aktuality</string>
    <string name="send">Odeslat</string>
    <string name="add_article">Přidat článek</string>
    <string name="event_description">Obsah aktuality</string>
    <string name="set_user_data_first">Nejdříve vyplňte údaje</string>
    <string name="open_settings">Otevřít nastavení</string>
    <string name="add_event">Přidat aktualitu</string>
    <string name="app_info">Informace aplikaci</string>
    <string name="send_mail_to_developer_summary">Našli jste chybu, nebo máte nápad na vylepšení? Klikněte sem nebo pošlete email na gohlinka2@gmail.com.</string>
    <string name="send_mail_to_developer">Poslat email vývojáři</string>
    <string name="author">Autor</string>
    <string name="author_name" translatable="false">František Hlinka</string>
    <string name="license_info">Informace o licencích</string>
    <string name="license_info_summary">Informace o licencích použitých knihoven</string>
    <string name="pref_key_send_email" translatable="false">sendEmail</string>
    <string name="pref_key_licence_info" translatable="false">licenceInfo</string>
    <string name="author_email" translatable="false">gohlinka2@gmail.com</string>
    <string name="support_email_subject" translatable="false">[GVPIntranet app]</string>
    <string name="pref_key_github">github</string>
    <string name="pref_key_rate">rate</string>
    <string name="rate_app">Ohodnotit aplikaci</string>
    <string name="rate_app_summary">Pokud se vám aplikace líbí, můžete ji ohodnotit na Google Play</string>
    <string name="open_on_github">Zobrazit projekt na GitHubu</string>
    <string name="open_on_github_summary">Aplikace je open-source. Klikněte zde pro zobrazení kódu</string>
</resources>